--- a/signup.css
+++ b/signup.css
@@ -6,7 +6,7 @@
 	font-family: 'Poppins', sans-serif;
 }
 body{
-	background-color: grey;
+	background-color: black;
 	display: flex;
 	justify-content: center;
 	align-items: center;
