--- a/signup.css
+++ b/signup.css
@@ -6,7 +6,7 @@
 	font-family: 'Poppins', sans-serif;
 }
 body{
-	background-color: grey;
+	background-color: grey; 
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -49,6 +49,7 @@ body{
 	display: flex;
 	flex-direction: column;
 	margin-bottom: 10px;
+	position: relative;
 }
 .form form .field label{
 	margin-bottom: 2px;
@@ -65,6 +66,14 @@ body{
 	border-radius: 5px;
 	border: 1px solid #ccc;
 
+}
+.form form .field i{
+	position: absolute;
+	right: 15px;
+	color: #ccc;
+	top: 70%;
+	transform: translateY(-50%);
+	cursor: pointer;
 }
 .form form .image input{
 	font-size: 16px;
@@ -90,4 +99,17 @@ body{
 .form .link a:hover{
 	text-decoration: underline;
 }
+/*user area css*/
+.users{
+	padding: 25px 30px;
+}
 
+.users header{
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	border-bottom: 2px solid #e6e6e6;
+	padding-bottom: 20px;
+
+
+}
