--- a/signup.css
+++ b/signup.css
@@ -110,6 +110,61 @@ body{
 	justify-content: space-between;
 	border-bottom: 2px solid #e6e6e6;
 	padding-bottom: 20px;
-
-
 }
+.wrapper img{
+	border-radius: 50%;
+	object-fit: cover;
+}
+.users header .content{
+	display: flex;
+}
+.users header .content img{
+	height: 50px;
+	width: 50px;
+}
+.users header .details{
+	margin-left: 15px;
+}
+.users header .details span{
+	font-size: 17px;
+	font-weight: bold;
+}
+.users header .logout{
+	background-color: #333;
+	color: #fff;
+	padding: 7px 10px;
+	border-radius: 5px;
+	font-size: 16px;
+}
+.users .search{
+	margin: 20px 0;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	position: relative;
+}
+.users .search .text{
+	font-size: 18px;
+}
+.users .search input{
+	position: absolute;
+	height: 42px;
+	width: calc(100% - 50px);
+	border: 1px solid #ccc;
+	padding: 0 13px;
+	font-size: 16px;
+	border-radius: 5px 0 0 5px;
+	outline: none;
+}
+.users .search button{
+	width: 47px;
+	height: 42px;
+	border: none;
+	outline: none;
+	color: #fff;
+	background-color: #333;
+	border-radius: 0 5px 5px 0;
+	cursor: pointer;
+	font-size: 16px;
+}
+
