--- a/signup.css
+++ b/signup.css
@@ -104,7 +104,8 @@ body{
 	padding: 25px 30px;
 }
 
-.users header{
+.users header,
+.users-list a{
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
@@ -115,17 +116,21 @@ body{
 	border-radius: 50%;
 	object-fit: cover;
 }
-.users header .content{
+:is(.users,.users-list) .content
+{
 	display: flex;
+	align-items: center;
 }
 .users header .content img{
 	height: 50px;
 	width: 50px;
 }
-.users header .details{
+
+:is(.users,.users-list) .details{
 	margin-left: 15px;
+	color: #000;
 }
-.users header .details span{
+:is(.users, .users-list) .details span{
 	font-size: 17px;
 	font-weight: bold;
 }
@@ -166,5 +171,39 @@ body{
 	border-radius: 0 5px 5px 0;
 	cursor: pointer;
 	font-size: 16px;
+}
+.users-list{
+	max-height: 350px;
+	overflow-y: auto;
+
+}
+.users-list::-webkit-scrollbar{
+	width: 0px;
+}
+.users-list a{
+	padding-right: 15px;
+	margin-bottom: 15px; 
+	page-break-after: 10px;
+
+}
+.users-list a:last-child{
+	border: none;
+	margin-bottom:0px ;
+}
+.users-list a .content img{
+	height: 40px;
+	width: 40px;
+}
+.users-list a .content p{
+	color: #67676a;
+}
+.users-list a .status-dot{
+	font-size: 12px;
+	color: #468669;
+}
+/*we use this class name in php ti show offline*/
+.users-list a .status-dot.offline{
+	color: #ccc;
+
 }
 
