--- a/signup.css
+++ b/signup.css
@@ -75,6 +75,10 @@ body{
 	transform: translateY(-50%);
 	cursor: pointer;
 }
+.form form .field i::before{
+	color: #333;
+	content: "f070";
+}
 .form form .image input{
 	font-size: 16px;
 }
@@ -227,7 +231,7 @@ body{
 	font-weight: bold;
 }
 .chat-box{
-	height: 500px;
+	height: 400px;
 	background-color: #f7f7f7;
 	padding: 10px 30px 20px 30px;
 	overflow-y: auto;
