--- a/signup.css
+++ b/signup.css
@@ -62,7 +62,7 @@ body{
 	height: 40px;
 	width: 100%;
 	padding: 0 8px;
-	font-size: 14px;
+	font-size: 14px; 
 	border-radius: 5px;
 	border: 1px solid #ccc;
 
@@ -75,9 +75,9 @@ body{
 	transform: translateY(-50%);
 	cursor: pointer;
 }
-.form form .field i::before{
+.form form .field i.active::before{
 	color: #333;
-	content: "f070";
+	content: "\f070";
 }
 .form form .image input{
 	font-size: 16px;
@@ -164,18 +164,34 @@ body{
 	font-size: 16px;
 	border-radius: 5px 0 0 5px;
 	outline: none;
+	opacity: 0;
+	transition: all 0.2s ease;
+	pointer-events: none;
+}
+.users .search input.active{
+	opacity: 1;
+	pointer-events: auto;
 }
 .users .search button{
 	width: 47px;
 	height: 42px;
 	border: none;
 	outline: none;
-	color: #fff;
-	background-color: #333;
+	color: #333;
+	background-color: #fff;
 	border-radius: 0 5px 5px 0;
 	cursor: pointer;
 	font-size: 16px;
+	transition: all 0.2s ease;
 }
+.users .search button.active{
+	color: #fff;
+	background-color: #333;
+}
+.users .search button.active i::before{
+	content: "\f00d";
+}
+
 .users-list{
 	max-height: 350px;
 	overflow-y: auto;
