--- a/signup.css
+++ b/signup.css
@@ -41,6 +41,7 @@ body{
 	text-align: center;
 	border-radius: 5px;
 	margin-bottom: 10px;
+	display: none;
 }
 /*.form form .name-details{
 	display: flex;
