--- a/signup.css
+++ b/signup.css
@@ -6,7 +6,7 @@
 	font-family: 'Poppins', sans-serif;
 }
 body{
-	background-color: grey; 
+	background-color: lightgrey; 
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -23,7 +23,7 @@ body{
 	padding: 25px 30px;
 }
 .form header{
-	font-size: 25px;
+	font-size: 24px;
 	font-weight: bold;
 	border-bottom: 1px solid #e6e6e6;
 	padding-bottom: 10px;
